--- a/library_file_downloader/build.gradle
+++ b/library_file_downloader/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     implementation project(':library_file_core')
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
     //SAF
     implementation 'androidx.documentfile:documentfile:1.0.1'
     //Glide
