--- a/library_file_core/build.gradle
+++ b/library_file_core/build.gradle
@@ -57,7 +57,7 @@ publish {
     groupId = 'com.ando.file'
     artifactId = 'FileOperator'
     uploadName = 'FileOperator'
-    publishVersion = '0.9.2'
+    publishVersion = '0.9.3-beta1'
     desc = 'Ando File Helper.'
     website = "https://github.com/javakam/${rootProject.name}"
 }
