--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 30
@@ -23,6 +23,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    packagingOptions {
+        exclude 'META-INF/*.kotlin_module'
+    }
 }
 
 dependencies {
@@ -35,19 +52,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    //core
-    implementation project(':library')
-
+    //implementation project(':library')
+    implementation 'ando.file:file-core:1.0.0'
 }
 
 
-publish {
-    repoName = 'maven'
-    userOrg = 'javakam'
-    groupId = 'ando.file.compressor'
-    artifactId = 'FileOperator'
-    uploadName = 'compressor'
-    publishVersion = '1.0.0'
-    desc = 'Ando File Helper Image Compressor.'
-    website = "https://github.com/javakam/${rootProject.name}"
-}
+//publish {
+//    repoName = 'maven'
+//    userOrg = 'javakam'
+//    groupId = 'ando.file'
+//    artifactId = 'file-compressor'
+//    publishVersion = '1.0.0'
+//    desc = 'Ando File Helper Image Compressor.'
+//    website = "https://github.com/javakam/${rootProject.name}"
+//    //dryRun = true
+//}
