--- a/library_selector/build.gradle
+++ b/library_selector/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-//apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 30
@@ -51,17 +51,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //implementation project(':library')
-    implementation 'ando.file:file-core:1.0.0'
+    implementation project(':library')
+    // implementation 'ando.file:file-core:1.0.0'
+
 }
 
-//publish {
-//    repoName = 'maven'
-//    userOrg = 'javakam'
-//    groupId = 'ando.file'
-//    artifactId = 'file-operator'
-//    publishVersion = '1.0.0'
-//    desc = 'Ando File Helper Operator.'
-//    website = "https://github.com/javakam/${rootProject.name}"
-//    //dryRun = true
-//}
+publish {
+    repoName = 'maven'
+    userOrg = 'javakam'
+    groupId = 'ando.file'
+    artifactId = 'selector'
+    publishVersion = '1.0.0'
+    desc = 'Ando File Helper Selector.'
+    website = "https://github.com/javakam/${rootProject.name}"
+    //dryRun = true
+}
