--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     implementation project(':library')
     implementation project(':library_android_q')
-    implementation project(':library_operator')
+    implementation project(':library_selector')
     implementation project(':library_compressor')
     //implementation project(':library_downloader')
 
