--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name='FileOperator'
 
 include ':library_android_q'
-include ':library_operator'
+include ':library_selector'
 include ':library_compressor'
 include ':sample_java'
 include ':app'
