--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
     <!--  照片的位置信息  -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
+    <!--  android:hasFragileUserData="true"  -->
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:hasFragileUserData="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="LockedOrientationActivity">
+        tools:ignore="AllowBackup,LockedOrientationActivity">
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
