--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation project(':library_compressor')
     //implementation project(':library_downloader')
 
+    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
+
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
