--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -44,12 +44,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly 'androidx.core:core-ktx:1.3.2'
+    compileOnly 'androidx.appcompat:appcompat:1.2.0'
+    //compileOnly "androidx.exifinterface:exifinterface:1.3.2"
 
     implementation project(':library')
     // implementation 'ando.file:file-core:1.0.0'
