--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compileOnly 'androidx.core:core-ktx:1.3.2'
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
-    //compileOnly "androidx.exifinterface:exifinterface:1.3.2"
+    //https://github.com/Curzibn/Luban/issues/337
+    compileOnly "androidx.exifinterface:exifinterface:1.3.2"
 
     implementation project(':library')
     // implementation 'ando.file:file-core:1.0.0'
