update gradle;modify some method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,11 @@ android {
         abortOnError false
     }
 
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
+
     kotlinOptions {
         jvmTarget = "1.8"
     }
