--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         tools:ignore="AllowBackup,LockedOrientationActivity">
         <activity
             android:name=".ui.MainActivity"
+            android:icon="@mipmap/ic_logo"
             android:screenOrientation="portrait"
             android:theme="@style/MainTheme">
             <intent-filter>
