--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ando.file.sample">
-
-    <!-- Apps on devices running Android 4.4 (API level 19) or higher cannot
+    <!--
+         Apps on devices running Android 4.4 (API level 19) or higher cannot
               access external storage outside their own "sandboxed" directory, so
               the READ_EXTERNAL_STORAGE (and WRITE_EXTERNAL_STORAGE) permissions
-              aren't necessary. -->
+              aren't necessary.
+    -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28"
-        tools:ignore="ScopedStorage" />
-
-    <!--  照片的位置信息  -->
+        tools:ignore="ScopedStorage" /> <!-- 照片的位置信息 -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
-    <!--  android:hasFragileUserData="true"  -->
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -36,14 +34,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".ui.core.FileCoreActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.storage.AppSpecificActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.storage.MediaStoreActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.storage.StorageAccessFrameworkActivity"
             android:screenOrientation="portrait" />
@@ -59,20 +58,6 @@
         <activity
             android:name=".ui.FileClearCacheActivity"
             android:screenOrientation="portrait" />
-
-        <!--    对外提供数据  注意: minSdkVersion="19"  -->
-        <!--    https://developer.android.com/guide/topics/providers/create-document-provider   -->
-        <!--        <provider-->
-        <!--            android:name=".MyCloudProvider"-->
-        <!--            android:authorities="${applicationId}.fileProvider"-->
-        <!--            android:exported="true"-->
-        <!--            android:grantUriPermissions="true"-->
-        <!--            android:permission="android.permission.MANAGE_DOCUMENTS">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.content.action.DOCUMENTS_PROVIDER" />-->
-        <!--            </intent-filter>-->
-        <!--        </provider>-->
-
     </application>
 
 </manifest>
