todo selector ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+//apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+}
 
-def config = rootProject.ext.android                    //配置
-def library = rootProject.ext.dependencies              //依赖
+def config = rootProject.ext.android
+def library = rootProject.ext.dependencies
 
 android {
     compileSdkVersion config.compileSdkVersion
