--- a/library_android_q/build.gradle
+++ b/library_android_q/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-//apply plugin: 'com.novoda.bintray-release'
-apply plugin: 'com.github.panpf.bintray-publish'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    //id 'com.novoda.bintray-release'
+    id 'com.github.panpf.bintray-publish'
+}
 
 android {
     compileSdkVersion 30
@@ -42,13 +44,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly 'androidx.core:core-ktx:1.3.2'
+    compileOnly 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation project(':library')
-    //implementation 'ando.file:file-core:1.0.0'
+    compileOnly project(':library')
+    //compileOnly 'ando.file:file-core:1.0.0'
 
     compileOnly "androidx.exifinterface:exifinterface:1.3.2"
     compileOnly 'androidx.documentfile:documentfile:1.0.1'
