--- a/library_downloader/build.gradle
+++ b/library_downloader/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    //id 'com.novoda.bintray-release'
+    id 'com.github.panpf.bintray-publish'
+}
 
 android {
     compileSdkVersion 30
