--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,9 @@
-rootProject.name='FileOperator'
+rootProject.name = 'FileOperator'
 
 include ':library_android_q'
+include ':library_selector_ui'
 include ':library_selector'
 include ':library_compressor'
 include ':sample_java'
 include ':app'
 include ':library'
-
-// 配合 com.liulishuo.okdownload 做文件下载
-//include ':library_file_downloader'
