--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = '1.4.21'
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         google()
-        maven { url "https://maven.google.com" }
         jcenter()
+        maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/javakam/FileOperator' }
         maven { url 'https://dl.bintray.com/novoda-oss/snapshots/' }
@@ -25,9 +26,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         google()
-        maven { url "https://maven.google.com" }
         jcenter()
+        maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/javakam/FileOperator' }
         maven { url 'https://dl.bintray.com/novoda-oss/snapshots/' }
