--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-//apply plugin: 'kotlin-android-extensions'
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -6,7 +5,6 @@ plugins {
 }
 
 def config = rootProject.ext.android
-def library = rootProject.ext.dependencies
 
 android {
     compileSdkVersion config.compileSdkVersion
@@ -14,6 +12,8 @@ android {
     defaultConfig {
         minSdkVersion config.minSdkVersion
         targetSdkVersion config.targetSdkVersion
+        versionCode config.versionCode
+        versionName config.versionName
 
         vectorDrawables.useSupportLibrary = true
 
