--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -5,15 +5,16 @@ plugins {
     id 'com.github.panpf.bintray-publish'
 }
 
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+def config = rootProject.ext.android
 
+android {
+    compileSdkVersion config.compileSdkVersion
+    buildToolsVersion config.buildToolsVersion
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion config.minSdkVersion
+        targetSdkVersion config.targetSdkVersion
+        versionCode config.versionCode
+        versionName config.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -61,7 +62,7 @@ publish {
     userOrg = 'javakam'
     groupId = 'ando.file'
     artifactId = 'compressor'
-    publishVersion = '1.2.0'
+    publishVersion = '1.3.0'
     desc = 'Android Image Compressor.'
     website = "https://github.com/javakam/${rootProject.name}"
     //dryRun = true
