--- a/library_android_q/build.gradle
+++ b/library_android_q/build.gradle
@@ -61,7 +61,7 @@ publish {
     userOrg = 'javakam'
     groupId = 'ando.file'
     artifactId = 'android-q'
-    publishVersion = '1.3.0'
+    publishVersion = config.versionName
     desc = 'FileOperator Compatible with Android Q.'
     website = "https://github.com/javakam/${rootProject.name}"
     //dryRun = false
