--- a/library_selector/build.gradle
+++ b/library_selector/build.gradle
@@ -52,7 +52,7 @@ publish {
     userOrg = 'javakam'
     groupId = 'ando.file'
     artifactId = 'selector'
-    publishVersion = '1.3.0'
+    publishVersion = config.versionName
     desc = 'Android File Selector.'
     website = "https://github.com/javakam/${rootProject.name}"
     //dryRun = true
