--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,17 +71,19 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation project(':library')
-    implementation project(':library_android_q')
     implementation project(':library_selector')
     implementation project(':library_compressor')
-    //implementation project(':library_downloader')
+    implementation project(':library_android_q')
+    implementation 'androidx.documentfile:documentfile:1.0.1'
 
+    //权限
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
-
+    //图片
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
-
-    implementation 'androidx.documentfile:documentfile:1.0.1'
+    //自己的东西用着放心 (*^▽^*)
+    //implementation 'ando.dialog:core:1.2.0'
+    //implementation 'ando.dialog:usage:1.2.0'
 
 }
 
