--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:maxSdkVersion="28"
         tools:ignore="ScopedStorage" />
 
+    <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <!-- 照片的位置信息 -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
@@ -56,6 +60,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.selector.FileSelectMultiFilesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.selector.FileSelectCustomFileTypeActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.FileInfoActivity"
