--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
 rootProject.name = 'FileOperator'
 
-include ':library_android_q'
-include ':library_selector_ui'
-include ':library_selector'
-include ':library_compressor'
-include ':sample_java'
 include ':app'
+include ':sample_java'
 include ':library'
+include ':library_selector'
+include ':library_selector_ui'
+include ':library_android_q'
+include ':library_compressor'
+include ':library_downloader'
