--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ include ':library_selector'
 include ':library_selector_ui'
 include ':library_android_q'
 include ':library_compressor'
-include ':library_downloader'
+//include ':library_downloader'
