--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ando.file.sample">
+
     <!--
          Apps on devices running Android 4.4 (API level 19) or higher cannot
               access external storage outside their own "sandboxed" directory, so
@@ -16,7 +17,6 @@
 
     <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <!-- 照片的位置信息 -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
@@ -45,6 +45,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.core.FileUtilsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.upload.FileUploadActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.storage.MediaStoreActivity"
