--- a/config.gradle
+++ b/config.gradle
@@ -10,4 +10,28 @@ ext {
             versionName      : "1.3.8"
     ]
 
+    version =
+            [
+                    support             : "1.0.0",
+                    appcompat           : "1.1.0",
+                    fragment            : "1.2.5",
+                    material            : '1.2.1',
+
+                    kotlin_coroutines   : '1.4.2-native-mt',
+                    core_ktx            : "1.3.2",
+                    core_testing        : '2.1.0',
+                    room                : '2.2.5',
+                    lifecycle           : "2.2.0",
+                    lifecycle_save_state: '2.2.0',
+                    work                : "2.4.0",
+                    paging              : '3.0.0-alpha06',
+
+                    //
+                    retrofit            : "2.9.0",
+                    okhttp              : '4.9.0',
+                    glide               : '4.11.0',
+                    eventbus            : '3.2.0'
+
+            ]
+
 }
