--- a/build.gradle
+++ b/build.gradle
@@ -3,36 +3,33 @@
 apply from: "config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.4.31'
+    ext.kotlin_version = '1.4.32'
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url 'https://dl.bintray.com/novoda-oss/snapshots/' }
-        maven { url "https://dl.bintray.com/javakam/AndoLibrary" }
-        maven { url "https://dl.bintray.com/javakam/AndoDialog" }
+        maven { url "https://dl.bintray.com/javakam/maven" }
         maven { url 'https://dl.bintray.com/javakam/FileOperator' }
     }
     dependencies {
         //gradle-wrapper.properties 👉 https://developer.android.com/studio/releases/gradle-plugin#updating-gradle
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        //classpath 'com.novoda:bintray-release:0.9.2'
-        classpath 'com.github.panpf.bintray-publish:bintray-publish:1.0.0'
+        classpath('io.deepmedia.tools:publisher:0.5.0')
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url 'https://dl.bintray.com/novoda-oss/snapshots/' }
-        maven { url "https://dl.bintray.com/javakam/AndoLibrary" }
-        maven { url "https://dl.bintray.com/javakam/AndoDialog" }
+        maven { url "https://dl.bintray.com/javakam/maven" }
         maven { url 'https://dl.bintray.com/javakam/FileOperator' }
     }
     tasks.withType(Javadoc) {
