--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    //id 'com.novoda.bintray-release'
-    id 'com.github.panpf.bintray-publish'
+    id 'io.deepmedia.tools.publisher'
 }
 
 def config = rootProject.ext.android
@@ -26,22 +25,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     lintOptions {
         abortOnError false
     }
-
     kotlinOptions {
         jvmTarget = "1.8"
-    }
-
-    packagingOptions {
-        exclude 'META-INF/*.kotlin_module'
     }
 }
 
@@ -57,13 +49,31 @@ dependencies {
 
 }
 
-publish {
-    repoName = 'FileOperator'
-    userOrg = 'javakam'
-    groupId = 'ando.file'
-    artifactId = 'compressor'
-    publishVersion = config.versionName
-    desc = 'Android Image Compressor.'
-    website = "https://github.com/javakam/${rootProject.name}"
-    //dryRun = true
+//publish {
+//    repoName = 'FileOperator'
+//    userOrg = 'javakam'
+//    groupId = 'ando.file'
+//    artifactId = 'compressor'
+//    publishVersion = config.versionName
+//    desc = 'Android Image Compressor.'
+//    website = "https://github.com/javakam/${rootProject.name}"
+//    //dryRun = true
+//}
+
+publisher {
+    project.name = "FileOperator"
+    project.description = "Android Image Compressor."
+    project.artifact = "compressor"
+    project.group = "ando.file"
+    project.url = "https://github.com/javakam/${rootProject.name}"
+    project.packaging = "aar"
+
+    release.version = config.versionName
+    release.tag = "v${config.versionName}"
+    release.description = "${project.name}"
+    sonatype("") {
+    }
+
+//    signing.key =project.findProperty(signing.keyId)
+//    signing.password =project.findProperty(signing.password)
 }
