switch to MavenCentral

--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ task androidSourcesJar(type: Jar) {
 
 //查看Sonatype信息 https://issues.sonatype.org/issues/?filter=-2
 ext {
-    PUBLISH_GROUP_ID = "ando.file"
+    PUBLISH_GROUP_ID = "com.github.javakam"
     PUBLISH_VERSION = rootProject.ext.android.versionName
 }
 ext["signing.keyId"] = ''
@@ -37,7 +37,7 @@ publishing {
             // The coordinates of the library, being set from variables that
             // we'll set up in a moment
             groupId PUBLISH_GROUP_ID
-            artifactId PUBLISH_ARTIFACT_ID
+            artifactId "ando.file.$PUBLISH_ARTIFACT_ID"
             version PUBLISH_VERSION
 
             // Two artifacts, the `aar` and the sources
