--- a/library_android_q/build.gradle
+++ b/library_android_q/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     compileOnly 'androidx.core:core-ktx:1.3.2'
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
 
-    compileOnly project(':library')
+    compileOnly project(':library_core')
     compileOnly "androidx.exifinterface:exifinterface:1.3.2"
     compileOnly 'androidx.documentfile:documentfile:1.0.1'
 }
