--- a/library_compressor/build.gradle
+++ b/library_compressor/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     //https://github.com/Curzibn/Luban/issues/337
     compileOnly "androidx.exifinterface:exifinterface:1.3.2"
 
-    implementation project(':library')
+    implementation project(':library_core')
 
 }
 
