--- a/library_selector/build.gradle
+++ b/library_selector/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compileOnly 'androidx.core:core-ktx:1.3.2'
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
 
-    compileOnly project(':library')
+    compileOnly project(':library_core')
 }
 
 ext {
