--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'FileOperator'
 
 include ':app'
-include ':library'
+include ':library_core'
 include ':library_selector'
 include ':library_selector_ui'
 include ':library_android_q'
