--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = 'FileOperator'
 include ':app'
 include ':library_core'
 include ':library_selector'
-include ':library_selector_ui'
 include ':library_android_q'
 include ':library_compressor'
+//include ':library_selector_ui'
 //include ':library_downloader'
