--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 // https://developer.android.com/studio/releases/gradle-plugin
-apply from: "config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext {
+        kotlin_version = '1.5.30'
+        applicationId = "com.ando.file.sample"
+        compileSdkVersion = 30
+        buildToolsVersion = '30.0.3'
+        minSdkVersion = 21
+        targetSdkVersion = 30
+        versionCode = 11
+        versionName = "2.0.0"
+    }
+
     repositories {
         google()
         maven { url "https://jitpack.io" }
